# paper-supplements

./: README.md  size_evaluation.ipynb
benchmarks/: Cargo.toml  make_nice_graph.py
benchmarks/benches/: polysphinx.rs
polysphinx/: Cargo.toml
polysphinx/examples/: scipher.rs
polysphinx/src/: lib.rs  node.rs  tree.rs
polysphinx/src/poly/: mod.rs  symmetric.rs
rollercoaster/: README.md  create_all_graphs.ipynb  create_simulations.ipynb
rollercoaster/scripts/: docker_03_jupyter_notebook.sh  docker_04a_run_missing.sh  docker_06_jupyter_notebook.sh
rollercoaster/simulation/: loopix.py  messages.py  notebook_utils.py  simulation.py
rollercoaster/simulation/multicast/: __init__.py  polysphinx.py  unicast.py
