[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3"
bitvec = "1.0"
rand = "0.8"
polysphinx = { "path" = "../polysphinx" }
sphinxcrypto = { git = "https://github.com/sphinx-cryptography/rust-sphinxcrypto.git", branch = "master" }
x25519-dalek-ng = { git = "https://github.com/sphinx-cryptography/x25519-dalek-ng.git", branch = "master" }

[[bench]]
name = "polysphinx"
harness = false
