[package]
name = "polysphinx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = { version = "1.0.0", features = ["serde"] }
curve25519-dalek = { version = "4.0.0-pre", features = ["serde"] }
hmac = "0.12.0"
itertools = "0.10.3"
ndarray = "0.15"
num-derive = "0.3.3"
num-traits = "0.2.14"
rand = "0.8.4"
rand_chacha = "0.3.1"
rand_core = "0.6.3"
serde = { version = "1.0.133", features = ["derive"] }
sha2 = "0.10.1"
thiserror = "1.0"
bincode = "1.3.3"
aes = "0.8.1"
ctr = { version = "0.9.1", features = ["std"] }

[profile.dev.package.ospreys]
opt-level = 3

[features]
padded_header = []
